--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,10 +51,14 @@
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/socket.io": "^2.1.11",
+    "@types/sockjs-client": "^1.1.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "socket.io-client": "^2.3.0",
+    "sockjs-client": "^1.5.0"
   }
 }
