Develop Subscribe 개발 중

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-server.port = 8888
+server.port=5000
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.h2.console.enabled=true
+spring.devtools.livereload.enabled=true
+
+
+# 콘솔 창에 출력되는 로깅 메세지를 색으로 구분해서 출력
+spring.output.ansi.enabled=always
