--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -7,6 +7,6 @@
   "jsxBracketSameLine": true,
   "bracketSpacing": true,
   "tabWidth": 2,
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "none"
 }
