--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@stomp/stompjs": "^5.4.4",
     "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.43",
@@ -57,8 +58,14 @@
     "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.5",
     "socket.io-client": "^2.3.0",
-    "sockjs-client": "^1.5.0"
+    "sockjs-client": "^1.5.0",
+    "styled-components": "^5.1.1",
+    "typesafe-actions": "^5.1.0"
   }
 }
