--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "react",
     "baseUrl": "./src/",
     "strict": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
   },
   "awesomeTypescriptLoaderOptions": {
     "useCache": true
