--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/socket.io": "^2.1.11",
     "@types/sockjs-client": "^1.1.1",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
