--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,8 @@
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "@types/socket.io": "^2.1.11",
     "@types/sockjs-client": "^1.1.1",
     "axios": "^0.20.0",
