[20200903] 회원 로그인 인증 구현

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,9 +6,22 @@ spring.devtools.livereload.enabled=true
 spring.output.ansi.enabled=always
 
 # postgres 설정
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://13.124.213.33:5432/chat
 spring.datasource.username=chat
 spring.datasource.password=semi
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
 
+spring.jpa.database-platform=postgres
+
+# Dialect 설정
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+#인코딩 설정
+#spring.http.encoding.charset=UTF-8
+#spring.http.encoding.enabled=true
+#spring.http.encoding.force=true
+#spring.datasource.sql-script-encoding= UTF-8
